# ethos

./: CMakeLists.txt
.github/workflows/: main.yml  release.yml
src/: CMakeLists.txt
src/util/: filesystem.cpp  filesystem.h
